clinicApptManagement/force-app/main/default/objects/Patient_Appointment__c/Patient_Appointment__c.object-meta.xml
<CustomObject>
    <label>Patient Appointment</label>
    <nameField>
        <displayFormat>APT-{0000}</displayFormat>
        <label>Appointment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Patient Appointments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>