clinicApptManagement/force-app/main/default/objects/Patient_Appointment__c/fields/Appointment_Fees__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Fees__c</fullName>
    <label>Appointment Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>