clinicApptManagement/force-app/main/default/objects/Patient_Appointment__c/fields/Physician__c.field-meta.xml
<CustomField>
    <fullName>Physician__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Physician</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordType.Name</field>
            <operation>equals</operation>
            <value>Physician</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Patient Appointments (Physician)</relationshipLabel>
    <relationshipName>Patient_Appointments1</relationshipName>
    <type>Lookup</type>
</CustomField>