clinicApptManagement/force-app/main/default/objects/Patient_Appointment__c/fields/Physician_Name__c.field-meta.xml
<CustomField>
    <fullName>Physician_Name__c</fullName>
    <formula>Physician__r.FirstName +&apos;,&apos;+ Physician__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Physician Name</label>
    <type>Text</type>
</CustomField>