clinicApptManagement/force-app/main/default/objects/Patient_Appointment__c/fields/Reason_for_Cancelling_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Cancelling_Appointment__c</fullName>
    <label>Reason for Cancelling Appointment</label>
    <type>TextArea</type>
</CustomField>