clinicApptManagement/force-app/main/default/objects/Patient_Appointment__c/fields/Time_Slot__c.field-meta.xml
<CustomField>
    <fullName>Time_Slot__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Time Slot</label>
    <referenceTo>Time_Slot__c</referenceTo>
    <relationshipLabel>Patient Appointments</relationshipLabel>
    <relationshipName>Patient_Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>